--- a/data-service/src/main/resources/application.properties
+++ b/data-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://db4free.net:3306/simplelibrary
-spring.datasource.username=simplelibrary
-spring.datasource.password=simplelibrary
+spring.datasource.url=jdbc:mysql://localhost:3306/testing
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.databasePlatform=org.hibernate.dialect.MySQL5Dialect
 
