--- a/library-service/pom.xml
+++ b/library-service/pom.xml
@@ -59,6 +59,15 @@
       <artifactId>springfox-swagger-ui</artifactId>
       <version>2.9.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>logging-interceptor</artifactId>
+      <version>3.9.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -67,6 +76,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
+          <addResources>true</addResources>
           <excludes>
             <exclude>
               <groupId>org.projectlombok</groupId>
