--- a/data-service/src/main/resources/application.properties
+++ b/data-service/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultComponentSafeNamingStrategy
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.hbm2ddl.auto=none
+
+management.endpoint.metrics.enabled=true
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.beans.enabled=true
+management.endpoint.health.show-details=ALWAYS
