--- a/library-service/pom.xml
+++ b/library-service/pom.xml
@@ -68,6 +68,20 @@
       <artifactId>logging-interceptor</artifactId>
       <version>3.9.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.jeasy</groupId>
+      <artifactId>easy-random-core</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.amdelamar</groupId>
+      <artifactId>jotp</artifactId>
+      <version>1.3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
