--- a/library-service/src/main/resources/application.properties
+++ b/library-service/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 server.port=8081
 config.data-service.url=http://localhost:8080/
+
+management.endpoint.metrics.enabled=true
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.beans.enabled=true
+management.endpoint.health.show-details=ALWAYS
